[gd_scene load_steps=2 format=3 uid="uid://dkpu18ar2h446"]

[ext_resource type="Script" uid="uid://c8qoywxto8aev" path="res://ui/game_over/game_over.gd" id="1_ns3eh"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ns3eh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Score"

[node name="score" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "0"

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "High Score"

[node name="highScore" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "0"

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Play again?"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
process_mode = 3
layout_mode = 2

[node name="yes" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "yes"

[node name="no" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "no"

[connection signal="button_up" from="VBoxContainer/HBoxContainer/yes" to="." method="_on_yes_button_up"]
[connection signal="button_up" from="VBoxContainer/HBoxContainer/no" to="." method="_on_no_button_up"]
